# OneLeaf

./: .gitignore  README.md  package.json  pnpm-lock.yaml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/asr-service/: asr_gpu_server.py
src-tauri/resources/python-embed/: python311._pth  requirements-asr.txt
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: knowledge_base.rs  mod.rs  onnx_embedder.rs  service.rs  vector_db.rs
src-tauri/src/commands/: ai.rs  asr.rs  mod.rs  video.rs
src-tauri/src/core/: mod.rs  sidecar_manager.rs  tray.rs
src-tauri/src/utils/: ffmpeg.rs  mod.rs  paths.rs
src/components/: VideoTranscriptDialog.vue
src/router/: index.ts
src/stores/: knowledgeBase.ts
src/views/: Chat.vue  Home.vue  Settings.vue
