[package]
name = "oneleaf"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "oneleaf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
ort = { version = "2.0.0-rc.9", features = ["copy-dylibs", "ndarray"] }
docx-rs = "0.4"
pdf-extract = "0.7"
zip = { version = "2", default-features = false, features = ["deflate"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
anyhow = "1"
parking_lot = "0.12"
once_cell = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "native-tls", "cookies", "blocking"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
rust_tokenizers = "8"
ndarray = "0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
base64 = "0.22"
urlencoding = "2"

